fix: Fixed client analysis + added all BCs CSV